ci: fix using latest corepack
because using the latest npm with corepack that is pre-installed may cause errors.

continuation of f09da91184b7e3564765c69a281512ed3caf9146 .

--- a/.github/workflows/ci-renovate.yaml
+++ b/.github/workflows/ci-renovate.yaml
@@ -12,10 +12,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - uses: actions/setup-node@v3
         with:
           node-version-file: .tool-versions
           cache: 'npm'
+
+      - name: Install latest corepack
+        run: |
+          npm i -g corepack@latest
+
       - run: corepack enable npm
+
       - run: npm ci
+
       - run: npm run lint:renovate-config-validator
