--- a/.github/workflows/ci-zenn.yaml
+++ b/.github/workflows/ci-zenn.yaml
@@ -46,17 +46,26 @@ jobs:
       ARTICLES_PATH: articles
     steps:
       - uses: actions/checkout@v3
+  
       - uses: actions/setup-node@v3
         with:
           node-version-file: .tool-versions
+
       - uses: actions/cache@v3
         with:
           path: ~/.npm
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
+
+      - name: Install latest corepack
+        run: |
+          npm i -g corepack@latest
+
       - run: corepack enable npm
+
       - run: npm ci
+
       - name: textlint / github-check
         uses: tsuyoshicho/action-textlint@v3
         with:
