--- a/.github/workflows/ci-zenn.yaml
+++ b/.github/workflows/ci-zenn.yaml
@@ -50,13 +50,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version-file: .tool-versions
-
-      - uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+          cache: 'npm'
 
       - name: Install latest corepack
         run: |
