--- a/.textlintrc
+++ b/.textlintrc
@@ -14,7 +14,7 @@
       "max-kanji-continuous-len": false, // 漢字6文字制限の無効化
       "no-exclamation-question-mark": false, // !?文字制限を無効化
       "ja-no-mixed-period": { // 読点（。）で文が終わるようにする
-        "allowPeriodMarks": [":", ".", "・", "："], 
+        "allowPeriodMarks": [":", ".", "・", "：", "．"], 
         "allowEmojiAtEnd": true // 末尾の絵文字を許可
       },
       "max-comma": false, // コンマの連続を許可
